recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: not found: value levels
    if (levels==0){
        ^Sierpinski:13: error: not found: value levels
    sierpinski(levels-1, length/2)
               ^Sierpinski:16: error: not found: value levels
    sierpinski(levels-1, length/2)
               ^